# etlSUS

./: .env-example  .gitignore  .travis.yml  README.md  config.py  pyproject.toml
.github/workflows/: python-package.yml
docs/: README PTBR.md  SIM PTBR.md  SIM.md  SINASC PTBR.md  SINASC.md
etlsus/: __init__.py  app.py  config.py  files.py  pipeline.py  utils.py
etlsus/conf/: config.yaml
etlsus/conf/extract/: download_urls.yaml
etlsus/conf/transform/: dataset_additional.yaml  dataset_schema.yaml  dataset_values.yaml
etlsus/extraction/: __init__.py  extraction.py  utils.py
etlsus/loader/: database.py  load.py
etlsus/loading/: __init__.py  database.py  loading.py  merge.py
etlsus/transformation/: __init__.py  mapper.py  transformation.py
etlsus/transformation/handlers/: __init__.py  handler.py
etlsus/transformation/handlers/utils/: time.py
etlsus/transformation/processor/: BaseProcessor.py  FileProcessor.py  __init__.py
test/: testFiles.py
test/_extraction/: testExtract.py  testUtils.py
test/_loading/: testDatabase.py  testLoad.py  testMerge.py
test/_transformation/: testMapper.py  testTransformation.py
test/_transformation/_handlers/: testHandler.py
test/_transformation/_handlers/_utils/: testTime.py
test/_transformation/processor/: testBaseProcessor.py
test/extract/: testUtils.py
tests/: testFiles.py
tests/_extraction/: testExtract.py
tests/_loading/: testLoad.py
tests/_transformation/: testMapper.py  testTransformation.py
tests/_transformation/_handlers/: testHandler.py
(+1 files in other folders)
